syntax = "proto3";

option java_multiple_files = true;
option java_package = "webapp.tier.grpc";
option java_outer_classname = "WebappProto";

import "google/protobuf/empty.proto";

package grpc;

// The Id service definition.
service Id {
    // Sends a id
    rpc getId (google.protobuf.Empty) returns (IdReply) {}
}

// The response message containing the id
message IdReply {
    uint32 id = 1;
}

// The Msg service definition.
service Msg {
    // Sends a message
    rpc getMsg (google.protobuf.Empty) returns (MsgReply) {}
}

// The response message containing the message
message MsgReply {
    string message = 1;
}
